--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <li>1/2 tsp vanilla extract</li>
       <li>1/2 cup boiling water</li>
     </ul>
+
     <h2 class="headers">Instructions</h2>
     <ol id="recipe-instructions">
       <li>Preheat oven to 350°F (175°C). Grease and flour a cake pan.</li>
@@ -37,6 +38,9 @@
       <li>Pour batter into the cake pan and bake for 30-35 minutes.</li>
       <li>Let cool before serving. Enjoy!</li>
     </ol>
+    <button onclick="highlightIngredients()">Highlight</button>
+    <button onclick="checkInstructions()">Check</button>
+    <button onclick="resetInstructions()">Reset</button>
   </div>
 </body>
 
